--- a/respo/web-admin-feign-dev.yml
+++ b/respo/web-admin-feign-dev.yml
@@ -9,6 +9,10 @@ spring:
       content-type: text/html
   zipkin: #zipkin 服务追踪依赖
     base-url: http://localhost:9411
+  boot:  # spring boot admin 健康检查地址配置
+    admin:
+      client:
+        url: http://localhost:8084
 
 server:
   port: 8765
